--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "primeraEntregaDesafioFinal",
+  "name": "segundaEntregaDesafioFinal",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,7 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "firebase-admin": "^10.0.1",
+    "moment": "^2.29.1",
+    "mongoose": "^6.1.5",
     "multer": "^1.4.4"
   }
 }
